--- a/selecao-hvet.html
+++ b/selecao-hvet.html
@@ -46,17 +46,96 @@
         position:relative; z-index:2;
         margin:-90px auto -90px !important;
       }
-      .wizard-shell{ background:#ffffff; border:1px solid #dbe7ff; border-radius:1rem; padding:1.5rem; box-shadow:0 12px 28px rgba(13,110,253,.08); margin-bottom:2rem; }
-      .wizard-heading{ font-weight:700; color:#0b2447; letter-spacing:.2px; }
-      .wizard-steps{ list-style:none; margin:0; padding:0; display:grid; gap:.75rem; grid-template-columns:repeat(auto-fit,minmax(200px,1fr)); }
-      .wizard-step{ display:flex; align-items:center; gap:.75rem; padding:.75rem 1rem; border-radius:.9rem; background:#f3f6ff; border:1px solid transparent; cursor:pointer; transition:all .2s ease; min-height:78px; }
-      .wizard-step .wizard-index{ width:36px; height:36px; border-radius:50%; background:#dee6ff; color:#0b2447; display:inline-flex; align-items:center; justify-content:center; font-weight:700; }
-      .wizard-step .wizard-title{ font-weight:600; color:#0b2447; display:block; }
-      .wizard-step .wizard-subtitle{ font-size:.8rem; color:#6c757d; display:block; }
-      .wizard-step.active{ border-color:rgba(13,110,253,.4); background:#e7efff; box-shadow:0 8px 20px rgba(13,110,253,.12); }
-      .wizard-step.active .wizard-index{ background:var(--brand); color:#ffffff; }
-      .wizard-step.completed{ border-color:rgba(25,135,84,.4); background:#e6f4ea; }
-      .wizard-step.completed .wizard-index{ background:#198754; color:#ffffff; }
+      .wizard-shell{
+        background:linear-gradient(160deg,#ffffff 0%, #f0f4ff 100%);
+        border:1px solid #d1defc;
+        border-radius:1.25rem;
+        padding:1.5rem 1.75rem;
+        box-shadow:0 16px 34px rgba(13,110,253,.08);
+        margin-bottom:2rem;
+      }
+      .wizard-heading{
+        font-weight:700;
+        letter-spacing:.18em;
+        font-size:.75rem;
+        text-transform:uppercase;
+        color:#6c7ab7;
+        display:flex;
+        align-items:center;
+        gap:.5rem;
+      }
+      .wizard-heading::before{
+        content:'';
+        width:36px;
+        height:2px;
+        background:rgba(13,110,253,.35);
+        border-radius:999px;
+      }
+      .wizard-steps{
+        list-style:none;
+        margin:0;
+        padding:1rem 0 0;
+        display:flex;
+        flex-wrap:wrap;
+        gap:.75rem;
+        justify-content:space-between;
+      }
+      .wizard-step{
+        flex:1 1 140px;
+        min-width:130px;
+        display:flex;
+        align-items:center;
+        justify-content:center;
+        gap:.6rem;
+        padding:.65rem 1rem;
+        border-radius:999px;
+        background:#f4f7ff;
+        border:1px solid transparent;
+        color:#0b2447;
+        cursor:pointer;
+        transition:all .2s ease;
+      }
+      .wizard-step:hover:not(.active){
+        border-color:rgba(13,110,253,.25);
+        box-shadow:0 6px 14px rgba(13,110,253,.12);
+      }
+      .wizard-step .wizard-index{
+        width:36px;
+        height:36px;
+        border-radius:50%;
+        border:2px solid var(--brand);
+        display:inline-flex;
+        align-items:center;
+        justify-content:center;
+        font-weight:700;
+        color:var(--brand);
+        background:#ffffff;
+      }
+      .wizard-step .wizard-label{
+        font-weight:600;
+        letter-spacing:.3px;
+      }
+      .wizard-step.active{
+        background:var(--brand);
+        border-color:var(--brand);
+        color:#ffffff;
+        box-shadow:0 12px 24px rgba(13,110,253,.22);
+      }
+      .wizard-step.active .wizard-index{
+        background:#0b5ed7;
+        border-color:#0b5ed7;
+        color:#ffffff;
+      }
+      .wizard-step.completed{
+        background:#e7f4ec;
+        border-color:#34c38f;
+        color:#0f5132;
+      }
+      .wizard-step.completed .wizard-index{
+        background:#198754;
+        border-color:#198754;
+        color:#ffffff;
+      }
       .wizard-progress{ height:6px; background:#e9ecef; border-radius:999px; overflow:hidden; margin-top:1.5rem; }
       .wizard-progress .progress-bar{ height:100%; background:var(--brand); width:0%; transition:width .3s ease; }
       .step-panel{ display:none; }
@@ -70,15 +149,38 @@
       .tiny{ font-size:.85rem; }
       .pill{ border-radius:999px; padding:.25rem .6rem; border:1px solid #dee2e6; }
       .uploader-status{ min-height:1.75rem; }
+      .racial-declaration-box{
+        background:#f8f9fa;
+        border:1px solid #dbe7ff;
+        border-radius:.75rem;
+        padding:1rem 1.25rem;
+        max-height:240px;
+        overflow:auto;
+        font-size:.95rem;
+        line-height:1.55;
+        color:#0b2447;
+      }
+      .racial-declaration-box strong{ letter-spacing:.3px; }
+      .racial-declaration-actions .btn{ min-width:130px; }
+      .racial-declaration-box::-webkit-scrollbar{ width:8px; }
+      .racial-declaration-box::-webkit-scrollbar-thumb{ background:#c7d5f8; border-radius:999px; }
       @media (max-width: 992px){
         :root{ --stage-w:100vw; --pattern-w:100vw; }
         .stage, .pattern-strip{ left:0; }
         header.hero{ background-position:center; background-size:cover; }
         body{ overflow-x:hidden; }
         .frame-card{ margin:-60px auto -60px; padding:1.25rem; }
-        .wizard-shell{ padding:1.25rem; }
-        .wizard-step{ min-height:auto; }
-        .wizard-step .wizard-subtitle{ font-size:.75rem; }
+        .wizard-shell{ padding:1.25rem 1.1rem; }
+        .wizard-heading::before{ width:24px; }
+        .wizard-steps{ gap:.5rem; }
+        .wizard-step{ flex:1 1 calc(50% - .5rem); padding:.55rem .85rem; }
+      }
+      @media (max-width: 576px){
+        .wizard-step{ flex:1 1 100%; justify-content:flex-start; }
+        .wizard-step .wizard-index{ width:32px; height:32px; }
+        .wizard-step .wizard-label{ font-size:.9rem; }
+        .wizard-progress{ margin-top:1rem; }
+        .racial-declaration-box{ max-height:200px; }
       }
     </style>
   </head>
@@ -94,48 +196,31 @@
 
       <div class="wizard-shell">
         <h2 class="h6 text-uppercase text-muted wizard-heading mb-3">Etapas da inscrição</h2>
-        <ol class="wizard-steps">
-          <li class="wizard-step active" data-step="0">
+        <p class="tiny text-muted mb-3">Acompanhe o avanço das etapas e navegue rapidamente pelo formulário.</p>
+        <ol class="wizard-steps" role="tablist">
+          <li class="wizard-step active" data-step="0" role="tab" aria-selected="true" tabindex="0">
             <span class="wizard-index">1</span>
-            <div>
-              <span class="wizard-title">Identificação</span>
-              <span class="wizard-subtitle">Dados pessoais e documentos</span>
-            </div>
+            <span class="wizard-label">Identificação</span>
           </li>
-          <li class="wizard-step" data-step="1">
+          <li class="wizard-step" data-step="1" role="tab" aria-selected="false" tabindex="-1">
             <span class="wizard-index">2</span>
-            <div>
-              <span class="wizard-title">Contato &amp; Endereço</span>
-              <span class="wizard-subtitle">Canais e localização</span>
-            </div>
+            <span class="wizard-label">Contato &amp; Endereço</span>
           </li>
-          <li class="wizard-step" data-step="2">
+          <li class="wizard-step" data-step="2" role="tab" aria-selected="false" tabindex="-1">
             <span class="wizard-index">3</span>
-            <div>
-              <span class="wizard-title">Formação &amp; Vínculos</span>
-              <span class="wizard-subtitle">Escolaridade e experiência</span>
-            </div>
+            <span class="wizard-label">Formação &amp; Vínculos</span>
           </li>
-          <li class="wizard-step" data-step="3">
+          <li class="wizard-step" data-step="3" role="tab" aria-selected="false" tabindex="-1">
             <span class="wizard-index">4</span>
-            <div>
-              <span class="wizard-title">Cotas &amp; Acessibilidade</span>
-              <span class="wizard-subtitle">Raça, gênero e PCD</span>
-            </div>
+            <span class="wizard-label">Cotas &amp; Acessibilidade</span>
           </li>
-          <li class="wizard-step" data-step="4">
+          <li class="wizard-step" data-step="4" role="tab" aria-selected="false" tabindex="-1">
             <span class="wizard-index">5</span>
-            <div>
-              <span class="wizard-title">Documentos</span>
-              <span class="wizard-subtitle">Envio de arquivos obrigatórios</span>
-            </div>
+            <span class="wizard-label">Documentos</span>
           </li>
-          <li class="wizard-step" data-step="5">
+          <li class="wizard-step" data-step="5" role="tab" aria-selected="false" tabindex="-1">
             <span class="wizard-index">6</span>
-            <div>
-              <span class="wizard-title">Revisão final</span>
-              <span class="wizard-subtitle">Confirmação e declaração</span>
-            </div>
+            <span class="wizard-label">Revisão final</span>
           </li>
         </ol>
         <div class="wizard-progress" aria-hidden="true">
@@ -568,6 +653,16 @@
           <div class="card-body">
             <div id="reviewBlock" class="mb-3"></div>
 
+            <div class="mb-4">
+              <h3 class="h6 section-title mb-2">Autodeclaração étnico-racial</h3>
+              <div id="racialDeclarationText" class="racial-declaration-box" tabindex="0" role="textbox" aria-readonly="true"></div>
+              <div class="d-flex justify-content-end gap-2 mt-3 racial-declaration-actions" id="racialDeclarationActions">
+                <button type="button" class="btn btn-outline-danger btn-sm" data-racial-choice="decline" disabled>Não aceito</button>
+                <button type="button" class="btn btn-outline-success btn-sm" data-racial-choice="accept" disabled>Aceito</button>
+              </div>
+              <div class="form-text tiny mt-2" id="racialDeclarationHint">Role o texto até o final para habilitar as opções.</div>
+            </div>
+
             <div class="form-check mb-3">
               <input class="form-check-input" type="checkbox" id="termoResponsabilidade">
               <label class="form-check-label" for="termoResponsabilidade">
@@ -713,6 +808,112 @@
         const str = String(value).trim();
         return str ? esc(str) : reviewPlaceholder;
       };
+      const racialDeclarationBox = $('#racialDeclarationText');
+      const racialHint = $('#racialDeclarationHint');
+      const racialButtons = Array.from(document.querySelectorAll('[data-racial-choice]'));
+      let racialButtonsEnabled = false;
+      let racialAcceptance = null;
+      let lastRacialSignature = '';
+      const declarationDateFormatter = new Intl.DateTimeFormat('pt-BR');
+
+      function setRacialAcceptance(value){
+        racialAcceptance = value;
+        racialButtons.forEach(btn => {
+          const choice = btn.dataset.racialChoice;
+          const isActive = value && choice === value;
+          btn.classList.toggle('active', !!isActive);
+          if(choice === 'accept'){
+            btn.classList.toggle('btn-success', !!isActive);
+            btn.classList.toggle('btn-outline-success', !isActive);
+          }else{
+            btn.classList.toggle('btn-danger', !!isActive);
+            btn.classList.toggle('btn-outline-danger', !isActive);
+          }
+        });
+        refreshSubmitState();
+      }
+
+      function setRacialButtonsEnabled(enabled){
+        racialButtonsEnabled = !!enabled;
+        racialButtons.forEach(btn => {
+          btn.disabled = !enabled;
+        });
+        if(!enabled){
+          setRacialAcceptance(null);
+        }
+      }
+
+      function updateRacialHint(message){
+        if(racialHint){
+          racialHint.textContent = message;
+        }
+      }
+
+      function updateRacialDeclaration(){
+        if(!racialDeclarationBox) return;
+        const nomeUpper = String($('#nome')?.value || '').trim().toUpperCase();
+        const cpfDigits = onlyDigits($('#cpf')?.value);
+        const cpfFormatted = cpfDigits ? fmtCPF(cpfDigits) : '';
+        const racaSelect = $('#raca');
+        const racaLabel = racaSelect && racaSelect.value ? String(racaSelect.selectedOptions[0]?.textContent || '').trim().toUpperCase() : '';
+        const cidadeUpper = String($('#cidade')?.value || '').trim().toUpperCase();
+        const signature = [nomeUpper, cpfDigits, racaLabel, cidadeUpper].join('|');
+        const nameSegment = nomeUpper ? `<strong>${esc(nomeUpper)}</strong>` : '____________________________';
+        const cpfSegment = cpfFormatted ? `<strong>${esc(cpfFormatted.toUpperCase())}</strong>` : '________________';
+        const raceSegment = racaLabel ? `<strong>${esc(racaLabel)}</strong>` : '________________';
+        const citySegment = cidadeUpper ? `<strong>${esc(cidadeUpper)}</strong>` : '________________';
+        const dateStr = declarationDateFormatter.format(new Date());
+        const raceLine = `• ${raceSegment}`;
+        const template = [
+          'Para fins do disposto na Portaria do Ministério do Trabalho nº3784/2023, em cumprimento da Lei 14.553/02023.',
+          'As informações relativas à etnia e raça devem ser obrigatoriamente prestadas nas inclusões, alterações ou retificações cadastrais dos trabalhadores, respeitando o critério de autodeclaração do trabalhador, em conformidade com a classificação utilizada pelo Instituto Brasileiro de Geografia e Estatística– IBGE.',
+          '',
+          `Eu, ${nameSegment},`,
+          `portador do CPF nº ${cpfSegment}, AUTODECLARO, sob penas de lei que,`,
+          'sou:',
+          raceLine,
+          '',
+          'Por ser expressão da verdade, firmo e assino a presente para que a mesma produza seus efeitos legais e de direito.',
+          `Cidade e Data: ${citySegment}, <strong>${esc(dateStr)}</strong>`
+        ].join('\n');
+        const hasChanged = signature !== lastRacialSignature;
+        if(hasChanged){
+          lastRacialSignature = signature;
+          setRacialButtonsEnabled(false);
+          updateRacialHint('Role o texto até o final para habilitar as opções.');
+          requestAnimationFrame(()=>{ racialDeclarationBox.scrollTop = 0; });
+        }
+        racialDeclarationBox.innerHTML = template;
+      }
+
+      function handleRacialScroll(){
+        if(!racialDeclarationBox || racialButtonsEnabled) return;
+        const reachedBottom = Math.ceil(racialDeclarationBox.scrollTop + racialDeclarationBox.clientHeight) >= racialDeclarationBox.scrollHeight - 4;
+        if(reachedBottom){
+          setRacialButtonsEnabled(true);
+          updateRacialHint('Selecione uma das opções abaixo.');
+        }
+      }
+
+      racialDeclarationBox?.addEventListener('scroll', handleRacialScroll);
+      racialButtons.forEach(btn => {
+        btn.addEventListener('click', () => {
+          if(btn.disabled) return;
+          const choice = btn.dataset.racialChoice;
+          if(racialAcceptance === choice){
+            setRacialAcceptance(null);
+            updateRacialHint('Selecione uma das opções abaixo.');
+            return;
+          }
+          setRacialAcceptance(choice);
+          if(choice === 'accept'){
+            updateRacialHint('Você aceitou a autodeclaração.');
+          }else if(choice === 'decline'){
+            updateRacialHint('Você não aceitou a autodeclaração.');
+          }
+        });
+      });
+
       function updateReview(){
         const nome=$('#nome').value;
         const email=($('#email').value||'').toLowerCase();
@@ -837,6 +1038,7 @@
         `;
 
         $('#reviewBlock').innerHTML = reviewSections.map(renderSection).join('\n');
+        updateRacialDeclaration();
       }
 
       // ========= Submit state =========
@@ -865,7 +1067,8 @@
         const btn=$('#btnSubmitAll');
         const termo=document.getElementById('termoResponsabilidade');
         const termoOk = termo ? termo.checked : true;
-        const allOk = baseFieldsOk() && docsRequiredOk() && termoOk;
+        const racialOk = racialAcceptance === 'accept';
+        const allOk = baseFieldsOk() && docsRequiredOk() && termoOk && racialOk;
         btn.disabled = !allOk;
         btn.classList.toggle('btn-success', allOk);
         btn.classList.toggle('btn-secondary', !allOk);
@@ -886,8 +1089,11 @@
           panel.setAttribute('aria-hidden', active ? 'false' : 'true');
         });
         wizardSteps.forEach((item,i)=>{
-          item.classList.toggle('active', i === clamped);
+          const isActive = i === clamped;
+          item.classList.toggle('active', isActive);
           item.classList.toggle('completed', i < clamped);
+          item.setAttribute('aria-selected', isActive ? 'true' : 'false');
+          item.setAttribute('tabindex', isActive ? '0' : '-1');
         });
         if(progressBar){
           const percent = stepPanels.length > 1 ? (clamped/(stepPanels.length - 1))*100 : 100;
@@ -913,9 +1119,16 @@
           btn.addEventListener('click', handleStepNav);
         });
         wizardSteps.forEach((step,i)=>{
-          step.addEventListener('click', ()=>{
+          const activate = ()=>{
             if(i === currentStepIndex) return;
             if(i <= currentStepIndex + 1) goToStep(i);
+          };
+          step.addEventListener('click', activate);
+          step.addEventListener('keydown', evt=>{
+            if(evt.key === 'Enter' || evt.key === ' '){
+              evt.preventDefault();
+              activate();
+            }
           });
         });
         goToStep(0, {scroll:false});
@@ -1058,6 +1271,8 @@
         fd.append('genero',$('#genero').value);
         fd.append('raca',$('#raca').value);
         fd.append('concorrer_pnp',$('#cotasPNP').value);
+        fd.append('autodeclaracao_racial', racialAcceptance === 'accept' ? 'ACEITO' : 'NAO');
+        fd.append('autodeclaracao_racial_texto', (racialDeclarationBox?.innerText || '').trim());
         // pcd
         fd.append('is_pcd',$('#is_pcd').value);
         fd.append('tipo_pcd',$('#tipo_pcd').value.trim());
